--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,8 +1,8 @@
 # Name of your application. Used to uniquely configure containers.
-service: workout_app
+service: exercise_app
 
 # Name of the container image (use your-user/app-name on external registries).
-image: workout_app
+image: exercise_app
 
 # Deploy to these servers.
 servers:
@@ -52,7 +52,7 @@ env:
     # WEB_CONCURRENCY: 2
 
     # Match this to any external database server to configure Active Record correctly
-    # Use workout_app-db for a db accessory server on same machine via local kamal docker network.
+    # Use exercise_app-db for a db accessory server on same machine via local kamal docker network.
     # DB_HOST: 192.168.0.2
 
     # Log everything from Rails
@@ -69,7 +69,7 @@ aliases:
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
-  - "workout_app_storage:/rails/storage"
+  - "exercise_app_storage:/rails/storage"
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
@@ -85,7 +85,7 @@ builder:
   #
   # # Pass arguments and secrets to the Docker build process
   # args:
-  #   RUBY_VERSION: ruby-3.4.8
+  #   RUBY_VERSION: ruby-3.3.8
   # secrets:
   #   - GITHUB_TOKEN
   #   - RAILS_MASTER_KEY
